--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
 <body id="page-top" style="background-color: #def2f1;">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color:#3aaFa9" id="sideNav">
+
+    <!-- /* background-image: url('assets/img/test.png'); */ -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color:#3aaFa9;" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -84,7 +86,7 @@
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
-                <h2 class="mb-5 text-main">EXPERIENCE <span class="thai-font text-main2 h5">(ประสบการณ์)</span></h2>
+                <h2 class="mb-5 text-main">EXPERIENCE</h2>
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
@@ -146,12 +148,13 @@
         <!-- Education-->
         <section class="resume-section" id="education">
             <div class="resume-section-content">
-                <h2 class="mb-5">Education</h2>
+                <h2 class="mb-5 text-main">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1 thai-font">
                         <h3 class="mb-0 thai-font">มหาวิทยาลัยเทคโนโลยีราชมงคลรัตน์โกสินทร์ วิทยาเขต ศาลายา</h3>
                         <div class="subheading mb-3 thai-font">บริหารธุรกิจ (พัฒนาซอฟต์แวร์)</div>
-                        <div class="thai-font">สารสนเทศ(เอกพัฒนาซอฟต์แวร์) - THESIS: เว็บไซต์การแข่งขันเกม ROV (RMUTR)</div>
+                        <div class="thai-font">สารสนเทศ(เอกพัฒนาซอฟต์แวร์) - THESIS: เว็บไซต์การแข่งขันเกม ROV (RMUTR)
+                        </div>
                         <p>GPA: 3.24</p>
                     </div>
                 </div>
@@ -170,7 +173,7 @@
         <!-- Skills-->
         <section class="resume-section" id="work">
             <div class="resume-section-content">
-                <h2 class="mb-5">My Recent Work</h2>
+                <h2 class="mb-5 text-main">My Recent Work</h2>
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-3 mt-2">
@@ -298,7 +301,7 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">Skills</h2>
+                <h2 class="mb-5 text-main">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
                     <li class="list-inline-item"><i class="fab fa-php"></i></li>
@@ -333,6 +336,7 @@
             </div>
         </section>
         <hr class="m-0" />
+        
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
