--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <li>เว็บไซต์ vijaipartner2u</li>
                         </ul>.</p>
                     </div>
-                    <div class="flex-shrink-0 thai-font"><span class="text-primary">31 สิงหาคม 2562 - ปัจจุบัน</span>
+                    <div class="flex-shrink-0 thai-font"><span class="text-primary">01 สิงหาคม 2563 - ปัจจุบัน</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -123,8 +123,8 @@
                         </ul>
                         </p>
                     </div>
-                    <div class="flex-shrink-0 thai-font"><span class="text-primary">01 พฤษาคม 2561 - 31 สิงหาคม
-                            2562</span></div>
+                    <div class="flex-shrink-0 thai-font"><span class="text-primary">25 เมษายน 2562 - 31 กรกฏาคม
+                            2563</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1 ">
@@ -138,8 +138,7 @@
                         </ul>
                         </p>
                     </div>
-                    <div class="flex-shrink-0 thai-font"><span class="text-primary">01 พฤศจิกายน 2560 - 01 กุุมภาพันธ์
-                            2561</span>
+                    <div class="flex-shrink-0 thai-font"><span class="text-primary">01 พฤศจิกายน 2561 - 01 มีนาคม 2562</span>
                     </div>
                 </div>
             </div>
